fix overflow on icons on image text blocks

--- a/css/app.css
+++ b/css/app.css
@@ -1704,6 +1704,10 @@ select{
   overflow:visible
 }
 
+.overflow-x-hidden{
+  overflow-x:hidden
+}
+
 .rounded{
   border-radius:0.25rem
 }
