--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -595,6 +595,10 @@
   overflow: visible;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
